# fan-manager

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.specify/specs/code-enhancement-20260610/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  usage.md
fan_manager/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  fan_manager.py  fan_manager_mcp.py  ipmi.py  main_agent.json  mcp_config.json  mcp_server.py  middlewares.py  models.py  utils.py  version.py
fan_manager/agent_data/: IDENTITY.md
fan_manager/mcp/: __init__.py  mcp_fan_control.py  mcp_ipmi.py  mcp_temperature.py
fan_manager/prompts/: main_agent.json
fan_manager/services/: __init__.py  fan_control_service.py
fan_manager/skills/fan-manager-automatic/: SKILL.md
fan_manager/skills/fan-manager-control/: SKILL.md
fan_manager/skills/fan-manager-temperature/: SKILL.md
installation/: index.html
overview/: index.html
prompts/: main_agent.md
scripts/: security_sanitizer.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_concept_parity.py  test_init_dynamics.py  test_ipmi.py  test_mcp_registration.py  test_service.py  test_startup.py
usage/: index.html
