[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fan-manager"
version = "1.2.0"
description = "Dell PowerEdge Fan Manager + MCP Server + A2A Agent"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11, <3.15"
dependencies = ["agent-utilities>=0.48.0", "python-dotenv>=1.0.0"]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = ["agent-utilities[mcp]>=0.48.0"]
agent = ["agent-utilities[agent,logfire]>=0.48.0", "logfire>=0.50.0"]
all = ["fan-manager[mcp,agent]>=1.1.0"]
test = ["pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov"]

[project.scripts]
fan-manager = "fan_manager.fan_manager:fan_manager"
fan-manager-mcp = "fan_manager.mcp_server:mcp_server"
fan-manager-agent = "fan_manager.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fan_manager = ["mcp_config.json", "agent_data/**", "skills/**"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fan_manager*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501", "B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.vulture]
ignore_names = ["request", "config", "ctx"]

[dependency-groups]
dev = ["pytest-timeout>=2.4.0"]
